--- a/q_euclidean_distance/quantum_euclidean_distance.ipynb
+++ b/q_euclidean_distance/quantum_euclidean_distance.ipynb
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'001': 488, '000': 536}\n"
+      "{'001': 509, '000': 515}\n"
      ]
     }
    ],
@@ -292,9 +292,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': 46707, '0': 53293}\n",
-      "Quantum Distance:  6.857\n",
-      "Euclidean Distance:  7.0\n"
+      "{'0': 53436, '1': 46564}\n",
+      "Quantum Distance:  7.005\n",
+      "Euclidean Distance:  7.0\n",
+      "Difference between Quantum and Euclidean distance:  0.004999999999999893\n"
      ]
     }
    ],
@@ -310,7 +311,8 @@
     "x = abs(((counts['0']/shots - 0.5)/0.5) * 2 * Z)\n",
     "Q_Dist = round(np.sqrt(x),4)\n",
     "print('Quantum Distance: ', round(Q_Dist,3))\n",
-    "print('Euclidean Distance: ',round(Dist,3))\n"
+    "print('Euclidean Distance: ',round(Dist,3))\n",
+    "print('Difference between Quantum and Euclidean distance: ', np.abs(round(Q_Dist,3)-round(Dist,3)))\n"
    ]
   },
   {
@@ -338,7 +340,7 @@
     {
      "data": {
       "text/html": [
-       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td><code>qiskit-terra</code></td><td>0.21.2</td></tr><tr><td><code>qiskit-aer</code></td><td>0.11.0</td></tr><tr><td><code>qiskit-ignis</code></td><td>0.4.0</td></tr><tr><td><code>qiskit-ibmq-provider</code></td><td>0.19.2</td></tr><tr><td><code>qiskit</code></td><td>0.38.0</td></tr><tr><td><code>qiskit-nature</code></td><td>0.4.5</td></tr><tr><td><code>qiskit-finance</code></td><td>0.3.4</td></tr><tr><td><code>qiskit-optimization</code></td><td>0.4.0</td></tr><tr><td><code>qiskit-machine-learning</code></td><td>0.4.0</td></tr><tr><th>System information</th></tr><tr><td>Python version</td><td>3.8.13</td></tr><tr><td>Python compiler</td><td>GCC 7.5.0</td></tr><tr><td>Python build</td><td>default, Mar 28 2022 11:38:47</td></tr><tr><td>OS</td><td>Linux</td></tr><tr><td>CPUs</td><td>4</td></tr><tr><td>Memory (Gb)</td><td>7.406520843505859</td></tr><tr><td colspan='2'>Fri Oct 14 10:49:12 2022 JST</td></tr></table>"
+       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td><code>qiskit-terra</code></td><td>0.21.2</td></tr><tr><td><code>qiskit-aer</code></td><td>0.11.0</td></tr><tr><td><code>qiskit-ignis</code></td><td>0.4.0</td></tr><tr><td><code>qiskit-ibmq-provider</code></td><td>0.19.2</td></tr><tr><td><code>qiskit</code></td><td>0.38.0</td></tr><tr><td><code>qiskit-nature</code></td><td>0.4.5</td></tr><tr><td><code>qiskit-finance</code></td><td>0.3.4</td></tr><tr><td><code>qiskit-optimization</code></td><td>0.4.0</td></tr><tr><td><code>qiskit-machine-learning</code></td><td>0.4.0</td></tr><tr><th>System information</th></tr><tr><td>Python version</td><td>3.8.13</td></tr><tr><td>Python compiler</td><td>GCC 7.5.0</td></tr><tr><td>Python build</td><td>default, Mar 28 2022 11:38:47</td></tr><tr><td>OS</td><td>Linux</td></tr><tr><td>CPUs</td><td>4</td></tr><tr><td>Memory (Gb)</td><td>7.406520843505859</td></tr><tr><td colspan='2'>Fri Oct 14 10:55:02 2022 JST</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -352,14 +354,6 @@
     "import qiskit.tools.jupyter\n",
     "%qiskit_version_table"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81d1cc26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
