--- a/q_euclidean_distance/quantum_euclidean_distance.ipynb
+++ b/q_euclidean_distance/quantum_euclidean_distance.ipynb
@@ -195,6 +195,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de54a2ee",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "$A \\rightarrow |A\\rangle = \\frac{1}{|A|}\\sum_i A_i|i\\rangle$   \n",
+    "$B \\rightarrow |B\\rangle = \\frac{1}{|B|}\\sum_i B_i|i\\rangle$  \n",
+    "\n",
+    "Implementation into qunatum circuit  \n",
+    "\n",
+    "$|\\phi\\rangle = \\frac{1}{\\sqrt{Z}}\\Big[|A| |0\\rangle -|B||1\\rangle \\Big]$  \n",
+    "$|\\psi\\rangle = \\frac{1}{\\sqrt{2}}\\Big[|0\\rangle \\otimes |A\\rangle + |1\\rangle \\otimes |B\\rangle \\Big]$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "361ffa9f",
